# UVCCamera

./: README.md
libuvccamera/src/main/java/com/serenegiant/usb/: UVCCamera.java
libuvccamera/src/main/jni/: CMakeLists.txt
libuvccamera/src/main/jni/UVCCamera/: Android.mk  UVCPreview.cpp
libuvccamera/src/main/jni/libusb/android/jni/: libusb.mk
libuvccamera/src/main/jni/libusb/libusb/: io.c
libuvccamera/src/main/jni/libusb/libusb/os/: android_usbfs.c  android_usbfs.h  linux_usbfs.h
libuvccamera/src/main/jni/libuvc/android/jni/: Android.mk
libuvccamera/src/main/jni/libuvc/include/libuvc/: libuvc_internal.h
libuvccamera/src/main/jni/libuvc/src/: frame.c  stream.c
